# nonebot_plugin_areusleepy

./: .env.example  .env.prod  .gitignore  1.安装脚本.bat  2.启动Bot.bat  README.md  install_libs.bat  install_libs.sh  pyproject.toml
plugins/nonebot_plugin_areusleepy/: __init__.py  __main__.py  config.py  getsleepy.py
plugins/queryfetch/: __init__.py  __main__.py
